--- a/index.html
+++ b/index.html
@@ -14,59 +14,83 @@
 
     <title>MJMorrison10 | [Challenge Name Here]</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main class="container">
-      <section class="daniel-clifford">
-        <h1 class="name">Daniel Clifford</h1>
-        <h2 class="title">Verified Graduate</h2>
+      <section class="section daniel-clifford">
+        <div class="name-card">
+          <div class="img">
+            <img src="./images/image-daniel.jpg" alt="daniel" />
+          </div>
+          <h1 class="name">Daniel Clifford</h1>
+          <h2 class="title">Verified Graduate</h2>
+        </div>
         <h3 class="quote">
           I received a job offer mid-course, and the subjects I learned were
-          current, if not more so, in the company I joined. I honestly feel I got
-          every penny’s worth.
+          current, if not more so, in the company I joined. I honestly feel I
+          got every penny’s worth.
         </h3>
         <p class="information">
           “ I was an EMT for many years before I joined the bootcamp. I’ve been
           looking to make a transition and have heard some people who had an
-          amazing experience here. I signed up for the free intro course and found
-          it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was
-          the best - and most grueling - time of my life. Since completing the
-          course, I’ve successfully switched careers, working as a Software
-          Engineer at a VR startup. ”
+          amazing experience here. I signed up for the free intro course and
+          found it incredibly fun! I enrolled shortly thereafter. The next 12
+          weeks was the best - and most grueling - time of my life. Since
+          completing the course, I’ve successfully switched careers, working as
+          a Software Engineer at a VR startup. ”
         </p>
       </section>
-      <section class="jonathan-walters">
-        <h1 class="name">Jonathan Walters</h1>
-        <h2 class="title">Verified Graduate</h2>
-        <h3 class="quote">The team was very supportive and kept me motivated</h3>
+      <section class="section jonathan-walters">
+        <div class="name-card">
+          <div class="img">
+            <img src="./images/image-jonathan.jpg" alt="jonathan" />
+          </div>
+          <h1 class="name">Jonathan Walters</h1>
+          <h2 class="title">Verified Graduate</h2>
+        </div>
+        <h3 class="quote">
+          The team was very supportive and kept me motivated
+        </h3>
         <p class="information">
           “ I started as a total newbie with virtually no coding skills. I now
           work as a mobile engineer for a big company. This was one of the best
           investments I’ve made in myself. ”
         </p>
       </section>
-      <section class="jeanette-harmon">
-        <h1 class="name">Jeanette Harmon</h1>
-        <h2 class="title">Verified Graduate</h2>
+      <section class="section jeanette-harmon">
+        <div class="name-card">
+          <div class="img">
+            <img src="./images/image-jeanette.jpg" alt="jeanette" />
+          </div>
+          <h1 class="name">Jeanette Harmon</h1>
+          <h2 class="title">Verified Graduate</h2>
+        </div>
         <h3 class="quote">An overall wonderful and rewarding experience</h3>
         <p class="information">
           “ Thank you for the wonderful experience! I now have a job I really
           enjoy, and make a good living while doing something I love. ”
         </p>
       </section>
-      <section class="patrick-abrams">
-        <h1 class="name">Patrick Abrams</h1>
-        <h2 class="title">Verified Graduate</h2>
+      <section class="section patrick-abrams">
+        <div class="name-card">
+          <div class="img">
+            <img src="./images/image-patrick.jpg" alt="patrick" />
+          </div>
+          <h1 class="name">Patrick Abrams</h1>
+          <h2 class="title">Verified Graduate</h2>
+        </div>
         <h3 class="quote">
           Awesome teaching support from TAs who did the bootcamp themselves.
-          Getting guidance from them and learning from their experiences was easy.
+          Getting guidance from them and learning from their experiences was
+          easy.
         </h3>
         <p class="information">
           “ The staff seem genuinely concerned about my progress which I find
@@ -77,35 +101,40 @@
           people. ”
         </p>
       </section>
-      <section class="kira-whittle">
-        <h1 class="name">Kira Whittle</h1>
-        <h2 class="title">Verified Graduate</h2>
+      <section class="section kira-whittle">
+        <div class="name-card">
+          <div class="img">
+            <img src="./images/image-kira.jpg" alt="kira" />
+          </div>
+          <h1 class="name">Kira Whittle</h1>
+          <h2 class="title">Verified Graduate</h2>
+        </div>
         <h3 class="quote">
           Such a life-changing experience. Highly recommended!
         </h3>
         <p class="information">
           “ Before joining the bootcamp, I’ve never written a line of code. I
           needed some structure from professionals who can help me learn
-          programming step by step. I was encouraged to enroll by a former student
-          of theirs who can only say wonderful things about the program. The
-          entire curriculum and staff did not disappoint. They were very hands-on
-          and I never had to wait long for assistance. The agile team project, in
-          particular, was outstanding. It took my learning to the next level in a
-          way that no tutorial could ever have. In fact, I’ve often referred to it
-          during interviews as an example of my developent experience. It
-          certainly helped me land a job as a full-stack developer after receiving
-          multiple offers. 100% recommend! ”
+          programming step by step. I was encouraged to enroll by a former
+          student of theirs who can only say wonderful things about the program.
+          The entire curriculum and staff did not disappoint. They were very
+          hands-on and I never had to wait long for assistance. The agile team
+          project, in particular, was outstanding. It took my learning to the
+          next level in a way that no tutorial could ever have. In fact, I’ve
+          often referred to it during interviews as an example of my developent
+          experience. It certainly helped me land a job as a full-stack
+          developer after receiving multiple offers. 100% recommend! ”
         </p>
       </section>
     </main>
 
     <footer>
-
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-        >. Coded by <a href="https://portfolio-mjm-react.netlify.app/">mjmorrison10</a>.
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://portfolio-mjm-react.netlify.app/">mjmorrison10</a>.
       </div>
     </footer>
   </body>
